加上预热 加上gc日志 加上compiler日志 调整control的算法